--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
+                        <li class="nav-item"><a class="nav-link" href="resume.html">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -380,10 +382,10 @@
                                 projects effectively.</p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
                                 <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
-                                <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                <a class="text-gradient" href="https://www.linkedin.com/in/rehanafzal1987"><i
+                                <a class="text-gradient" href="https://scholar.google.com/citations?user=cAZBO5oAAAAJ&hl=en" target="_blank" title="Google scholar"><i class="bi bi-google"></i></a>
+                                <a class="text-gradient" href="https://www.linkedin.com/in/rehanafzal1987" title="Linked" target="_blank"><i
                                         class="bi bi-linkedin"></i></a>
-                                <a class="text-gradient" href="https://github.com/RehanAfzalkhan"><i
+                                <a class="text-gradient" href="https://github.com/RehanAfzalkhan" title="github" target="_blank"><i
                                         class="bi bi-github"></i></a>
                             </div>
                         </div>
