--- a/publications.html
+++ b/publications.html
@@ -36,8 +36,8 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
-                        <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projects.html">International Achievements</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="resume.html">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
@@ -51,35 +51,52 @@
                     <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Publications</span></h1>
                 </div>
                 <ol>
-                    <a href="https://journals.umt.edu.pk/index.php/UMT-AIR/article/view/3668/2245" target="_blank"><li>Recitation of The Holy Quran Verses Recognition System Based on Speech
-                    Recognition Techniques</li></a>
+                    <a href="https://journals.umt.edu.pk/index.php/UMT-AIR/article/view/3668/2245" target="_blank">
+                        <li>Recitation of The Holy Quran Verses Recognition System Based on Speech
+                            Recognition Techniques</li>
+                    </a>
                 </ol>
                 <ul>
                     <li>Authored a research paper on Quranic verse recognition, employing Hidden Markov Models
-                    (HMM), CMU Sphinx, and MFCC for
-                    automated Tajweed compliance with over 92% accuracy.</li>
+                        (HMM), CMU Sphinx, and MFCC for
+                        automated Tajweed compliance with over 92% accuracy.</li>
                     <li>Developed a machine learning pipeline integrating data preprocessing, feature extraction,
-                    and classification using GMM
-                    and Sequential Forward Selection (SFS) to optimize phoneme recognition.</li>
+                        and classification using GMM
+                        and Sequential Forward Selection (SFS) to optimize phoneme recognition.</li>
                     <p><b>(Published on: 2023-12-20)</b></p>
                 </ul>
 
-                                <div class="text-center mb-5">
-                                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Articles</span></h1>
-                                </div>
-                                <ol>
-                                    <li><a href="https://medium.com/@rehanafzal.dev/responsible-use-of-artificial-intelligence-fc381cc5371c" target="_blank">Responsible Use of Artificial Intelligence</a></li>
-                                    <li><a href="https://medium.com/@rehanafzal.dev/artificial-intelligence-3-pillers-51c6cee5ffa1" target="_blank">Artificial Intelligence 3 Pillers</a></li>
-                                    <li><a href="https://medium.com/@rehanafzal.dev/what-is-debugging-762010a578fa" target="_blank">What is debugging?</a></li>
-                                    <li><a href="https://medium.com/@rehanafzal.dev/how-to-write-first-research-paper-caf51fc7c4dd" target="_blank">How to write first research paper</a></li>
-                                    <li><a href="https://medium.com/@rehanafzal.dev/mastering-array-manipulation-solving-the-sort-array-by-parity-problem-9dc4e6565bb3" target="_blank">Mastering Array Manipulation: Solving the “Sort Array By Parity” Problem</a></li>
+                <div class="text-center mb-5">
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Articles</span></h1>
+                </div>
+                <ol>
+                    <li><a href="https://medium.com/@rehanafzal.dev/responsible-use-of-artificial-intelligence-fc381cc5371c"
+                            target="_blank">Responsible Use of Artificial Intelligence</a></li>
+                    <li><a href="https://medium.com/@rehanafzal.dev/artificial-intelligence-3-pillers-51c6cee5ffa1"
+                            target="_blank">Artificial Intelligence 3 Pillers</a></li>
+                    <li><a href="https://medium.com/@rehanafzal.dev/what-is-debugging-762010a578fa" target="_blank">What
+                            is debugging?</a></li>
+                    <li><a href="https://medium.com/@rehanafzal.dev/how-to-write-first-research-paper-caf51fc7c4dd"
+                            target="_blank">How to write first research paper</a></li>
+                    <li><a href="https://medium.com/@rehanafzal.dev/mastering-array-manipulation-solving-the-sort-array-by-parity-problem-9dc4e6565bb3"
+                            target="_blank">Mastering Array Manipulation: Solving the “Sort Array By Parity” Problem</a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/pulse/how-build-google-chrome-extension-step-rehan-afzal-ci5wf/?trackingId=o%2BdOQn21S3G7pvVHz%2FU8yA%3D%3D"
+                            target="_blank">How to Build a Google Chrome Extension Step by Step</a></li>
+                    <li><a href="https://www.linkedin.com/pulse/autonomous-resource-management-system-crisis-rehan-afzal-chvzf/?trackingId=o%2BdOQn21S3G7pvVHz%2FU8yA%3D%3D"
+                            target="_blank">Autonomous Resource Management System for Crisis Survival</a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/pulse/infotainment-system-self-driving-cars-rehan-afzal-7ji8f/?trackingId=o%2BdOQn21S3G7pvVHz%2FU8yA%3D%3D"
+                            target="_blank">Infotainment System in Self driving cars</a></li>
+                    <li><a href="https://www.linkedin.com/pulse/leadership-mastery-coffee-amir-khan-rehan-afzal-ikymf/?trackingId=o%2BdOQn21S3G7pvVHz%2FU8yA%3D%3D"
+                            target="_blank">Leadership Mastery</a>
+                    </li>
 
-                                    
-                                </ol>
+                </ol>
                 <!-- sample -->
 
- 
-                 <!-- sample end  -->
+
+                <!-- sample end  -->
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Project Card 1-->
@@ -100,9 +117,9 @@
                                             was saved and used to predict the class of
                                             new images, achieving an accuracy of 96.8% on a test sample.</p>
                                     </div> -->
-                                    <!-- <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d"
+                        <!-- <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d"
                                         alt="..." /> -->
-                                <!-- </div>
+                        <!-- </div>
                             </div>
                         </div> -->
                     </div>
