--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
-                        <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projects.html">International Achievements</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="resume.html">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
@@ -52,13 +52,13 @@
                         <!-- Header text content-->
                         <div class="text-center text-xxl-start">
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
-                                <div class="text-uppercase">Develop &middot; Deploy &middot; ML Models</div>
+                                <div class="text-uppercase">Research &middot; Build &middot; Deploy</div>
                             </div>
-                            <div class="fs-3 fw-light text-muted">I can empower your business with</div>
+                            <div class="fs-3 fw-light text-muted">Muhammad Rehan Afzal</div>
                             <!-- <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Get online and
                                     grow fast</span></h1> -->
                             <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">
-                                    AI-driven solutions</span></h1>
+                                    AI/ML Enginner & Researcher</span></h1>
 
                             <!-- AI-driven solutions -->
                             <!-- <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
@@ -372,14 +372,10 @@
                     <div class="col-xxl-8">
                         <div class="text-center my-5">
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                            <p class="lead fw-light mb-4">My name is Muhammad Rehan Afzal. I 'm Software Engineer Fellow
-                                @Headstarter AI.</p>
-                            <p class="text-muted">Experienced AI/ML Engineer with extensive expertise in developing and
-                                deploying machine learning models, deep learning
-                                architectures, and AI-driven solutions for text, image and time series data. Proficient
-                                in various programming
-                                languages, frameworks, and cloud platforms. Proven ability to lead teams and manage
-                                projects effectively.</p>
+                            <!-- <p class="lead fw-light mb-4">AI/ML Enginner & Researcher</p> -->
+                            <p class="text-muted">I am an AI and Machine Learning Engineer passionate about exploring research opportunities in AI to tackle real-world
+                            challenges. My focus lies in leveraging cutting-edge AI models, deep learning techniques, and data-driven solutions to
+                            create impactful innovations.</p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
                                 <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
                                 <a class="text-gradient" href="https://scholar.google.com/citations?user=cAZBO5oAAAAJ&hl=en" target="_blank" title="Google scholar"><i class="bi bi-google"></i></a>
