--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                                         levels (water, food, power) with automated survival alerts and decision support.</li></p>
                                         <a href="https://github.com/Kommu-ID/ARMS.git" class="btn btn-success" target="_blank">Source Code</a> <a href="https://huggingface.co/spaces/rehanafzal/ARMS" class="btn btn-warning" target="_blank">Demo</a>
                                     </div>
-                                    <img class="img-fluid" src="assets/aya hackthon.webp" width="300px" height="400px"
+                                    <img class="img-fluid" src="assets/Astronouts.webp" width="300px" height="400px"
                                         alt="..." />
                                 </div>
                             </div>
