--- a/volunteer.html
+++ b/volunteer.html
@@ -50,52 +50,38 @@
         <section class="py-5">
             <div class="container px-5 mb-5">
                 <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Publications</span></h1>
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Volunteer Teaching
+                        </span></h1>
                 </div>
                 <ol>
-                    <a href="https://journals.umt.edu.pk/index.php/UMT-AIR/article/view/3668/2245" target="_blank">
-                        <li>Recitation of The Holy Quran Verses Recognition System Based on Speech
-                            Recognition Techniques</li>
+                    <a href="https://drive.google.com/file/d/1_lZgr7j8q94B6TitaqfGA1wkdx5UmUL0/view?usp=sharing" target="_blank">
+                        <li>2x times participated as a Judge in the international Generative AI hackathon organized by Pak Angels.</li>
+                    </a>
+                    <a href="https://drive.google.com/file/d/1GBtFOzopZ18nmtHLugIviLfHFesnOxKu/view?usp=drive_link"
+                        target="_blank">
+                        <li>Teaching Assistant in <b>Stanford University</b> Code In Place 2024 </li>
                     </a>
                 </ol>
                 <ul>
-                    <li>Authored a research paper on Quranic verse recognition, employing Hidden Markov Models
-                        (HMM), CMU Sphinx, and MFCC for
-                        automated Tajweed compliance with over 92% accuracy.</li>
-                    <li>Developed a machine learning pipeline integrating data preprocessing, feature extraction,
-                        and classification using GMM
-                        and Sequential Forward Selection (SFS) to optimize phoneme recognition.</li>
-                    <p><b>(Published on: 2023-12-20)</b></p>
+                    <li>For six weeks Led weekly 50-minute sessions for a diverse group of 10 students.</li>
+                    <li>Taught foundational concepts of computer science using Karel and Python programming.</li>
+                    <li>Assisted international students in resolving coding problems and building logical solutions.
+                    </li>
                 </ul>
 
                 <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Articles</span></h1>
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Webinars</span></h1>
                 </div>
                 <ol>
-                    <li><a href="https://medium.com/@rehanafzal.dev/responsible-use-of-artificial-intelligence-fc381cc5371c"
-                            target="_blank">Responsible Use of Artificial Intelligence</a></li>
-                    <li><a href="https://medium.com/@rehanafzal.dev/artificial-intelligence-3-pillers-51c6cee5ffa1"
-                            target="_blank">Artificial Intelligence 3 Pillers</a></li>
-                    <li><a href="https://medium.com/@rehanafzal.dev/what-is-debugging-762010a578fa" target="_blank">What
-                            is debugging?</a></li>
-                    <li><a href="https://medium.com/@rehanafzal.dev/how-to-write-first-research-paper-caf51fc7c4dd"
-                            target="_blank">How to write first research paper</a></li>
-                    <li><a href="https://medium.com/@rehanafzal.dev/mastering-array-manipulation-solving-the-sort-array-by-parity-problem-9dc4e6565bb3"
-                            target="_blank">Mastering Array Manipulation: Solving the “Sort Array By Parity” Problem</a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/pulse/how-build-google-chrome-extension-step-rehan-afzal-ci5wf/?trackingId=o%2BdOQn21S3G7pvVHz%2FU8yA%3D%3D"
-                            target="_blank">How to Build a Google Chrome Extension Step by Step</a></li>
-                    <li><a href="https://www.linkedin.com/pulse/autonomous-resource-management-system-crisis-rehan-afzal-chvzf/?trackingId=o%2BdOQn21S3G7pvVHz%2FU8yA%3D%3D"
-                            target="_blank">Autonomous Resource Management System for Crisis Survival</a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/pulse/infotainment-system-self-driving-cars-rehan-afzal-7ji8f/?trackingId=o%2BdOQn21S3G7pvVHz%2FU8yA%3D%3D"
-                            target="_blank">Infotainment System in Self driving cars</a></li>
-                    <li><a href="https://www.linkedin.com/pulse/leadership-mastery-coffee-amir-khan-rehan-afzal-ikymf/?trackingId=o%2BdOQn21S3G7pvVHz%2FU8yA%3D%3D"
-                            target="_blank">Leadership Mastery</a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/pulse/maximize-your-future-opportunities-rehan-afzal-yq5if"
-                            target="_blank">Maximize your future opportunities</a>
-                    </li>
+                    <a href="https://youtu.be/shIfqpunwGw" target="_blank">
+                        <li>Hosted a webinar on “Meta hacker Cup 2024” competition for Undergraduate students in “The
+                            Islamia University of
+                            Bahawalpur(iub)” in 2024</li>
+                    </a>
+                    <a href="https://www.linkedin.com/posts/rehanafzal1987_scholarships-education-webinar-activity-7202669006716153856-uIhP?utm_source=share&utm_medium=member_desktop"
+                        target="_blank">
+                        <li>Hosted a webinar on “How to Secure Fully Funded Scholarship in USA” at “IUB” in 2024.</li>
+                    </a>
 
                 </ol>
                 <!-- sample -->
