--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,9 @@
                         <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">International Achievements</a>
                         </li>
-                        <!-- <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li> -->
-                        <li class="nav-item"><a class="nav-link" href="resume.html">Experience</a></li>
+                        <li class="nav-item"><a class="nav-link" href="volunteer.html">Volunteer</a></li>
+                        <li class="nav-item"><a class="nav-link" href="resume.html">Teaching</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
