--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
                     aria-expanded="false" aria-label="Toggle navigation"><span
                         class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
-                        <li class="nav-item"><a class="nav-link" href="projects.html">International Achievements</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li> -->
-                        <li class="nav-item"><a class="nav-link" href="resume.html">Experience</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    </ul>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">International Achievements</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="volunteer.html">Volunteer</a></li>
+                    <li class="nav-item"><a class="nav-link" href="resume.html">Teaching</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li> -->
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
                 </div>
             </div>
         </nav>
@@ -58,7 +60,7 @@
                             <!-- <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Get online and
                                     grow fast</span></h1> -->
                             <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">
-                                    AI/ML Enginner & Researcher</span></h1>
+                                    AI Researcher & Developer</span></h1>
 
                             <!-- AI-driven solutions -->
                             <!-- <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
